--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://img.lastwhisper.cn/favicon.jpeg" />
     <title>F2POOL TASK(Cryptocurrency Exchanges)</title>
   </head>
   <body>
