hotfix: update title(it will be deleted in a few days)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://img.lastwhisper.cn/favicon.jpeg" />
-    <title>F2POOL TASK(Cryptocurrency Exchanges)</title>
+    <title>TASK(Cryptocurrency Exchanges)</title>
   </head>
   <body>
     <div id="root"></div>
